--- a/yolox/function.yaml
+++ b/yolox/function.yaml
@@ -14,21 +14,21 @@ metadata:
 
 spec:
   description: YOLOX
-  runtime: "python:3.6"
+  runtime: "python"
   handler: main:handler
   eventTimeout: 30s
 
   build:
-    image: ubuntu:20.04
-
     directives:
       preCopy:
         - kind: USER
           value: root
         - kind: RUN
-          value: apt-get update && apt-get -y install python3 python3-pip libgl1-mesa-dev
+          value: apt-get update && apt-get -y install libgl1-mesa-dev
         - kind: RUN
-          value: pip install opencv_python numpy 'torch>=1.7' pyyaml yolox
+          value: pip install opencv_python numpy 'torch>=1.7' pyyaml
+        - kind: RUN
+          value: pip install yolox
         - kind: WORKDIR
           value: /opt/nuclio
 
